force-app/main/default/objects/Material__c/fields/AnoImportacion__c.field-meta.xml
<CustomField>
    <fullName>AnoImportacion__c</fullName>
    <description>Para los productos importados viene el año de importación. Este dato es importante porque debe salir en la factura</description>
    <label>Año de Importacion</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>