force-app/main/default/objects/Material__c/fields/BusinessSite__c.field-meta.xml
<CustomField>
    <fullName>BusinessSite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Site</label>
    <referenceTo>BusinessSite__c</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <type>Lookup</type>
</CustomField>