force-app/main/default/objects/Material__c/fields/Estante__c.field-meta.xml
<CustomField>
    <fullName>Estante__c</fullName>
    <description>Nombre del estante fisico donde se guarda en material</description>
    <label>Estante</label>
    <length>40</length>
    <type>Text</type>
</CustomField>