force-app/main/default/objects/Material__c/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <label>IntegrationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Editado</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <color>#FF0000</color>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>