force-app/main/default/objects/Material__c/fields/MaterialStatus__c.field-meta.xml
<CustomField>
    <fullName>MaterialStatus__c</fullName>
    <label>Material Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTPL</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>Disponible</label>
            </value>
            <value>
                <fullName>MTRE</fullName>
                <color>#FF0000</color>
                <label>Reservado</label>
            </value>
            <value>
                <fullName>MTPM</fullName>
                <color>#CC33CC</color>
                <label>Muleto</label>
            </value>
            <value>
                <fullName>MTND</fullName>
                <color>#FF9966</color>
                <label>No Disponible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>