force-app/main/default/objects/Material__c/fields/NMU__c.field-meta.xml
<CustomField>
    <fullName>NMU__c</fullName>
    <label>NMU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>