force-app/main/default/objects/Material__c/fields/OrdenVenta__c.field-meta.xml
<CustomField>
    <fullName>OrdenVenta__c</fullName>
    <label>Orden de Venta</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>