force-app/main/default/objects/Material__c/fields/OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>OriginCountry__c</fullName>
    <description>Esto se usa en material importados y tiene el pais de donde se realizó la importación</description>
    <label>Pais de Origen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>