force-app/main/default/objects/Material__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <type>Lookup</type>
</CustomField>