force-app/main/default/objects/Material__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>Código único que identifica el material. En tipo &quot;Terminales&quot; se trata del IMEI. En tipo &quot;Simcard&quot; refiere al IMSI</description>
    <externalId>true</externalId>
    <label>SerialNumber</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>