force-app/main/default/objects/Material__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;MTPL&apos;</defaultValue>
    <description>Estado del material. Sólo el estado &lt;MTPL&gt; Disponible va a permitir ser reservado.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTPL</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>Disponible</label>
            </value>
            <value>
                <fullName>MTRE</fullName>
                <color>#FF0000</color>
                <label>Reservado</label>
            </value>
            <value>
                <fullName>MTPM</fullName>
                <color>#CC33CC</color>
                <label>Disponible Prestamo</label>
            </value>
            <value>
                <fullName>MTND</fullName>
                <color>#FF9966</color>
                <label>No Disponible</label>
            </value>
            <value>
                <fullName>MTDG</fullName>
                <label>Devuelto en garantia</label>
            </value>
            <value>
                <fullName>MTPO</fullName>
                <label>Prestado</label>
            </value>
            <value>
                <fullName>MCLV</fullName>
                <label>Vendido</label>
            </value>
            <value>
                <fullName>MCSH</fullName>
                <label>Siniestro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>