force-app/main/default/objects/Material__c/fields/Werks__c.field-meta.xml
<CustomField>
    <fullName>Werks__c</fullName>
    <label>Werks</label>
    <length>10</length>
    <type>Text</type>
</CustomField>