force-app/main/default/objects/Material__c/recordTypes/Materials.recordType-meta.xml
<RecordType>
    <fullName>Materials</fullName>
    <active>true</active>
    <label>Materials</label>
</RecordType>