force-app/main/default/objects/Material__c/listViews/All_Materials.listView-meta.xml
<ListView>
    <fullName>All_Materials</fullName>
    <columns>NAME</columns>
    <columns>NMU__c</columns>
    <columns>BusinessSite__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Materials</label>
</ListView>