force-app/main/default/objects/Material__c/listViews/Disponible.listView-meta.xml
<ListView>
    <fullName>Disponible</fullName>
    <columns>NAME</columns>
    <columns>BusinessSite__c</columns>
    <columns>Product__c</columns>
    <columns>NMU__c</columns>
    <columns>Serial__c</columns>
    <columns>Werks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>MTPL</value>
    </filters>
    <label>Disponible</label>
</ListView>