force-app/main/default/objects/Material__c/listViews/Reservados.listView-meta.xml
<ListView>
    <fullName>Reservados</fullName>
    <columns>NAME</columns>
    <columns>BusinessSite__c</columns>
    <columns>Product__c</columns>
    <columns>NMU__c</columns>
    <columns>Serial__c</columns>
    <columns>Werks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>MTRE</value>
    </filters>
    <label>Reservados</label>
</ListView>